# wevent_dumper

./: Cargo.toml
src/: channel_iter.rs  errors.rs  event_iter.rs  lib.rs  main.rs  pub_metadata.rs  pub_metadata_fetcher.rs  pub_metadata_fields.rs  renderer.rs  vwrapper.rs  win_event.rs
wevents/: Cargo.toml
wevents/src/: channel_iter.rs  errors.rs  event_iter.rs  pub_metadata.rs
wevents_dumper/: Cargo.toml
wevents_dumper/src/: main.rs
win_events/: Cargo.toml
win_events/src/: channel_iter.rs  errors.rs  event_iter.rs  lib.rs  pub_metadata_fetcher.rs  pub_metadata_fields.rs  renderer.rs  utils.rs  variant.rs  wev_wrapper.rs  win_event.rs
win_events_dumper/: Cargo.toml
win_events_dumper/src/: main.rs
