[package]
name = "win_events"
version = "0.1.0"
authors = ["Adam Lesperance <lespea@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["kv_unstable_sval"] }
paste = "0.1"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6"
widestring = "0.4"
winapi = { version = "0.3", features = ["errhandlingapi", "winbase", "winerror", "winevt"] }
winstructs = "0.3"

#wchar = "0.5"
