[package]
name = "win_events_dumper"
version = "0.1.0"
authors = ["Adam Lesperance <lespea@gmail.com>"]
edition = "2018"

[dependencies]
flate2 = "1"
log = { version = "0.4", features = ["kv_unstable_sval"] }
femme = "1"
snafu = "0.6"
#wchar = "0.5"
#widestring = "0.4"
win_events = { version = "0", path = "../win_events" }
winapi = { version = "0.3", features = ["errhandlingapi", "winbase", "winerror", "winevt"] }
